@@ -1,5 +1,10 @@
 2008-11-04  Scott Ellington <scott.ellington@gmail.com> 
 
+	* Layer.cs, Xml/Serialization/MapSerializer.cs, Style.cs: set up
+	  theming infrastructure
+
+2008-11-04  Scott Ellington <scott.ellington@gmail.com> 
+
 	* Layer.cs, Drawing/MapDrawer.cs, Xml/Serialization/MapSerializer.cs,
 	  Style.cs, Cumberland.csproj: move layer style stuff to separate
 	  class
